PROJECT(OpenGLTest)

CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "./bin/")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

INCLUDE_DIRECTORIES(include)
LINK_DIRECTORIES()
FILE(GLOB SOURCES "src/*.cpp")

add_executable(OpenGLTest ${SOURCES})
target_link_libraries(${PROJECT_NAME} glut GL)